Fix deprecated